--- a/paper.tex
+++ b/paper.tex
@@ -363,6 +363,7 @@ The preceding argument demonstrates the manner in which robustness is maximized 
 \FloatBarrier
 
 \section{Tables}
+\todo{Fill out notation table}
 \input{tex/tablenotation}
 \input{tex/table2x2stab}
 \input{tex/tablenographs}
